# mit-or-gpl-3-0-plus-multi-license-investigator

./: LICENSE_1_MIT.txt  README.md  pyproject.toml
src/mit_or_gpl_3_0_plus_multi_license_investigator/: __init__.py
